Creating test for employee and creating endpoint to get employee by id
