# ginSql/endpoints/employees/routes.go
@@ -5,12 +5,12 @@ import "github.com/gin-gonic/gin"
 func Routes(r *gin.Engine) {
 	////////// Implementations
 	employeesGet := GetEmployeesEndpoint{}
+	employeeGet := GetEmployeeEndpoint{}
 
 	///////// Endpoints
 	r.GET("/employees", employeesGet.GetEmployees)
-	r.POST("/employees")
+	r.POST("/employees", employeeGet.GetEmployee)
 	r.GET("/employees/:id")
 	r.PATCH("/employees/:id")
-	r.PUT("/employees/:id")
 	r.DELETE("/employees/:id")
 }
